third-a-charm/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: testing
  labels:
    app: redis
spec:
    replicas: 1
    selector:
        matchLabels:
          app: redis
    template:
        metadata:
            labels:
              app: redis
        spec:
            tolerations:
              - key: kubernetes.azure.com/scalesetpriority
                operator: Equal
                value: spot
                effect: 'NoSchedule'
            containers:
            - name: redis
              image: redis:alpine
              ports:
              - containerPort: 6379
              imagePullPolicy: Always
