third-a-charm/platform-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-api-service
  namespace: testing
  labels:
    app: platform-api
spec:
  type: ClusterIP
  selector:
    app: platform-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: testing
  labels:
    app: redis
spec:
    type: ClusterIP
    selector:
        app: redis
    ports:
      - protocol: TCP
        port: 6379
        targetPort: 6379
