third-a-charm/user-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  namespace: testing
  labels:
    app: user-api
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
