third-a-charm/frontend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: testing
spec:
  ingressClassName: nginx-internal
  rules:
    - host: frontend.testing.k8s.bumastemra.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - frontend.testing.k8s.bumastemra.nl
      secretName: testing-tls-secret
